<resources>
    <string name="app_label">Spare Parts</string>
    <string name="generateLog">output Log</string>
    <string name="toast_log_generated">log file have output to %s ,please send it developer to solve associate issue</string>
    <string name="to_sdcard">/sdcard/logcat.txt</string>
    <string name="to_data">/data/logcat.txt</string>
    <string name="make_sure">Are you sure to output the log to %s ?</string>
    <string name="alert">Alert</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="logcat">LogCat</string>
    <string name="config_view">Configuration Info View</string>
    <string name="cit">Cit</string>
    <string name="sdcard_inexist">sdcard is not exist ,please insert it</string>
    <string name="sdcard_is_full">there is no free space in sdcard</string>
    <string name="out_to_sdcard">out to sdcard</string>
    <string name="sum_out_to_sdcard">out Log to /sdcard/logcat.log</string>
    <string name="out_to_data">out to data</string>
    <string name="sum_out_to_data">out Log to /data/data/com.lewa.cit/logcat.log</string>
    <string name="out_to_spec_localtion">out Log specify localtion</string>
    <string name="out_rec_log">recovery output</string>
    <string name="sum_out_rec_log">out rec_log to specify localtion</string>
    <string name="config_info_view">Configuration Information</string>
    <string name="sum_config_info_view">System Configuration Information</string>
    <string name="development_tools">development tools</string>
    <string name="sum_dev_tools">development test tools</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="sum_spare_parts">Spare Parts</string>
    <string name="about_app">About App</string>
    <string name="sum_about_app">Information about app</string>
    <string name="version">version</string>
    <string name="date">date</string>
    <string name="menu_upload_exceptions">Upload Exceptions</string>
    <string name="menu_clear_exceptions">Clear Exceptions</string>
    <string name="enable_wifi">Enable Wifi</string>
    <string name="disable_wifi">Disable Wifi</string>
    <string name="wifi_on_duration">Wifi on (ms): </string>
    <string name="wifi_off_duration">Wifi off (ms): </string>
    <string name="wifi_cycles_done">Cycles done: </string>
    <string name="start_toggling">Start Wifi Toggle</string>
    <string name="stop_toggling">Stop Wifi Toggle</string>
    <string name="start_screen_toggling">Start Screen Toggle</string>
    <string name="stop_screen_toggling">Stop Screen Toggle</string>
    <string name="start_mms">Start MMS</string>
    <string name="stop_mms">Stop MMS</string>
    <string name="start_hipri">Start HiPri</string>
    <string name="stop_hipri">Stop HiPri</string>
    <string name="crash">CRASH</string>
    <string name="device_info_default">unknown</string>
    <string name="device_info_uptime">Uptime</string>
    <string name="device_info_awaketime">Awake Time</string>
    <string name="device_info_asleeptime">Asleep Time</string>
    <string name="build_id_label">Build ID</string>
    <string name="build_date_label">Build Date</string>
    <string name="build_type_label">Build Type</string>
    <string name="build_product_label">Build Product</string>
    <string name="build_user_label">Build Label</string>
    <string name="build_host_label">Build Host</string>
    <string name="gsm_version_baseband_label">Baseband Version</string>
    <string name="gsm_version_ril_impl_label">RIL Impl Version</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="refresh_networks">Refresh Network List</string>
    <string name="radioInfo_menu_viewADN">View SIM Address Book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="disabled"><i>disabled</i></string>
    <string name="system"><i>system</i></string>
    <string name="debuggable"><i>debuggable</i></string>
    <string name="nocode"><i>no code</i></string>
    <string name="persistent"><i>persistent</i></string>
    <string name="restart">Restart</string>
    <string name="package_summary_uid_label">User ID</string>
    <string name="package_summary_task_label">Task Affinity</string>
    <string name="package_summary_version_label">Version</string>
    <string name="package_summary_source_label">Source</string>
    <string name="package_summary_receivers_label">Receivers</string>
    <string name="package_summary_data_label">Data</string>
    <string name="package_summary_instrumentation_label">Instrumentation</string>
    <string name="package_summary_process_label">Process</string>
    <string name="package_summary_services_label">Services</string>
    <string name="package_summary_providers_label">Providers</string>
    <string name="package_summary_activities_label">Activities</string>
    <string name="none">"(none)"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="launch_multiple">Multiple (normal)</string>
    <string name="launch_singleTop">Single Top</string>
    <string name="launch_singleTask">Single Task</string>
    <string name="launch_singleInstance">Single Instance</string>
    <string name="launch_unknown">"(Unknown)"</string>
    <string name="development_settings_show_cpu_text">Show CPU usage</string>
    <string name="development_settings_always_finish_text">Immediately destroy activities</string>
    <string name="development_settings_show_load_text">Show running processes</string>
    <string name="development_settings_show_updates_text">Show screen updates</string>
    <string name="development_settings_compatibility_mode_text">Disable compatibility</string>
    <string name="device_info_title">Device info</string>
    <string name="development_settings_wait_for_debugger_text">Wait for debugger</string>
    <string name="development_settings_show_background_text">Show background</string>
    <string name="development_settings_show_xmpp_text">Show GTalk service connection status</string>
    <string name="development_settings_debug_app_label_text">Debug App:</string>
    <string name="development_settings_show_sleep_text">Show sleep state on LED</string>
    <string name="development_settings_keep_screen_on_text">Keep screen on while plugged in</string>
    <string name="monkey_screen_initialActivity_text"></string>
    <string name="monkey_screen_number_of_events_label">Number of Events: </string>
    <string name="monkey_screen_start_text">Start</string>
    <string name="monkey_screen_initial_activity_label">Initial Activity: </string>
    <string name="show_activity_clear_on_background_label">Clear on Background</string>
    <string name="show_activity_task_affinity_label">Task Affinity</string>
    <string name="show_activity_process_label">Process</string>
    <string name="show_activity_state_not_needed_label">State Not Needed</string>
    <string name="show_activity_required_permission_label">Required Permission</string>
    <string name="show_activity_multiprocess_label">Multiprocess</string>
    <string name="red_button_behavior_label">End Button Behavior</string>
    <string name="gls_tester_label">GLS Tester</string>
    <string name="gls_tester_prefer_hosted">Hosted</string>
    <string name="gls_tester_require_google">Google</string>
    <string name="gls_tester_get_accounts">List</string>
    <string name="gls_tester_clear">Clear</string>
    <string name="gls_tester_go">Go</string>
    <string name="gls_tester_do_notification">Notify on failure</string>
    <string name="gls_tester_run_intent">Run intent</string>
    <string name="gls_tester_wipe_passwords">Wipe passwords</string>
    <string name="process_name_header">Process Name:</string>
    <string name="package_list_header">Packages in process:</string>
    <string name="package_label">Package Name:</string>
    <string name="touchscreen_label">touchscreen:</string>
    <string name="input_method_label">inputMethod:</string>
    <string name="hard_keyboard_label">hardKeyboard:</string>
    <string name="navigation_label">navigation:</string>
    <string name="five_way_nav_label">five way nav:</string>
    <string name="gles_version_label">GLES Version:</string>
    <string name="perm_name_text">Name :  </string>
    <string name="dialog_title_error">Error</string>
    <string name="invalid_perm_name">Invalid Permission Name</string>
    <string name="perm_desc_text">Desc :  </string>
    <string name="perm_group_text">Group :  </string>
    <string name="perm_protection_text">Protection Level :  </string>
    <string name="perm_source_text">Source package :  </string>
    <string name="perm_list_header_text">Apps using permission  </string>
    <string name="source_uid_text">Source uid :  </string>
    <string name="shared_pkgs_text">Packages accessing via shared uid :  </string>
    <string name="accounts_tester_app_name">Accounts Tester</string>
    <string name="accounts_tester_get_accounts_by_type">Get By Type</string>
    <string name="accounts_tester_get_all_accounts">Get All</string>
    <string name="accounts_tester_add_account">Add</string>
    <string name="accounts_tester_select_account_type">Select Account Type</string>
    <string name="accounts_tester_process_name_header">Process Name:</string>
    <string name="accounts_tester_remove_account">Remove Account</string>
    <string name="accounts_tester_get_auth_token">Get Auth Token</string>
    <string name="accounts_tester_test_has_features">Has Features</string>
    <string name="accounts_tester_invalidate_auth_token">Invalidate Token</string>
    <string name="accounts_tester_account_context_menu_title">account operations</string>
    <string name="accounts_tester_do_get_auth_token">Ok</string>
    <string name="accounts_tester_enter_auth_token_type">Enter the authtoken type:</string>
    <string name="accounts_tester_update_credentials">Update Credentials</string>
    <string name="accounts_tester_confirm_credentials">Confirm Credentials</string>
    <string name="accounts_tester_clear_password">Clear Password</string>
    <string name="accounts_tester_edit_properties">Properties</string>
    <string name="accounts_tester_desired_authtokentype_label">authtoken type:</string>
    <string name="accounts_tester_desired_features_label">features:</string>
    <string name="bind_button">bind</string>
    <string name="unbind_button">unbind</string>
    <string name="start_sync_button">start sync</string>
    <string name="phonetest_summary">Show Phone State and Sim State</string>
    <string name="phonetest_title">Phone State</string>
    <string name="phonetypetitle">Phone Type</string>
    <string name="phonetype"></string>
    <string name="dataactivitytitle">Data Activity</string>
    <string name="dataactivity"></string>
    <string name="datastatetitle">Data State</string>
    <string name="datastate"></string>
    <string name="networkcountrytitle">Network Country</string>
    <string name="networkcountry"></string>
    <string name="networkoperatorIdtitle">Network Operator Id</string>
    <string name="networkoperatorId"></string>
    <string name="networknametitle">Network Name</string>
    <string name="networkname"></string>
    <string name="networktypetitle">Network Type</string>
    <string name="networktype"></string>
    <string name="simstatetitle">Sim State</string>
    <string name="simstate"></string>
    <string name="simcountrytitle">Sim Country</string>
    <string name="simcountry"></string>
    <string name="simoperatorcodetitle">Sim Operator Code</string>
    <string name="simoperatorcode"></string>
    <string name="simoperatorname"></string>
    <string name="simserialtitle"></string>
    <string name="simserial"></string>
    <string name="phonestate">phone state: </string>
</resources>